# chatbot_python

./: .gitignore  package.json
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: __init__.py  auth.py  conversations.py  documents.py  memories.py
backend/app/lib/ai/: ai_service.py  memory_judge.py  persistence.py  request_builder.py  rerank.py  stream.py
backend/app/lib/ai/embedding/: __init__.py  client.py  service.py
backend/app/lib/ai/prompting/: selector.py
backend/app/lib/ai/rag/: formatter.py  mmr.py
backend/app/lib/auth/: __init__.py  current_user.py  security.py  session.py
backend/app/lib/db/: __init__.py  errors.py  pool.py  sanitize.py  vector.py
backend/app/lib/db/repositories/: auth.py  conversation.py  document.py  (+5 more)
backend/app/lib/documents/: __init__.py  chunker.py  parser.py  task_registry.py
backend/app/schemas/: chat.py
backend/app/services/: chat_service.py
backend/app/shared/: logging.py  settings.py
backend/sql/: apply.py
backend/sql/migrations/: 0000_base_schema.sql  0001_messages_embedding.sql  0002_embedding_retry.sql  0003_document_ingest_jobs.sql  0004_auth_sessions.sql
backend/tests/ai/: test_embedding_service.py  test_memory_judge.py  test_mmr.py  test_persistence.py  test_prompting.py  test_request_builder.py  test_stream.py
backend/tests/api/: test_documents.py
backend/tests/auth/: test_security.py
backend/tests/db/: test_sanitize.py  test_vector_search.py
backend/tests/documents/: test_chunker.py  test_parser.py
backend/tests/services/: test_chat_service.py
(+55 files in other folders)
